--- a/erp-system/src/main/resources/application.properties
+++ b/erp-system/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # MyBatis 설정
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.jdbc-type-for-null=varchar
+#카멜 표기법 자동 언더스코어
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # JPA 설정
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
