--- a/erp-system/pom.xml
+++ b/erp-system/pom.xml
@@ -133,6 +133,11 @@
 		  <artifactId>mockito-inline</artifactId>
 		  <version>4.11.0</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
