--- a/erp-system/src/main/resources/application.properties
+++ b/erp-system/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=update
 #운영 시
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+# 500ms 이상 걸리면 WARN
+performance.logging.warn-threshold-ms=500
