25/04/23 AOP 기반 성능 로깅

--- a/erp-system/src/main/resources/application.properties
+++ b/erp-system/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.jpa.show-sql=true
 
 # 500ms 이상 걸리면 WARN
 performance.logging.warn-threshold-ms=500
+logging.level.com.kwanwx.erp.aop.PerformanceLoggingingAspect=WARN
