25/04/24 애플리케이션 모니터링·헬스체크

--- a/erp-system/src/main/resources/application.properties
+++ b/erp-system/src/main/resources/application.properties
@@ -24,3 +24,14 @@ spring.jpa.show-sql=true
 # 500ms 이상 걸리면 WARN
 performance.logging.warn-threshold-ms=500
 logging.level.com.kwanwx.erp.aop.PerformanceLoggingingAspect=WARN
+
+# Actuator 엔드포인트 노출
+management.endpoints.web.exposure.include=health, info, metrics, prometheus, logger, threaddump
+# 관리용 엔드포인트 기본 경로
+management.endpoints.web.base-path=/actuator
+# Micrometer 기본 태그
+management.metrics.tags.application=${spring.application.name:erp-system}
+# Actuator 권한으로 health만 허용
+management.endpoint.health.roles=ACTUATOR
+# prometheus 엔드포인트 활성화
+management.endpoint.prometheus.enabled=true
